# oryx

./: README.md  demo.py  pyproject.toml
oryx/: __init__.py  version.py
oryx/bijectors/: __init__.py  bijector_extensions.py  bijector_extensions_test.py
oryx/core/: __init__.py  kwargs_util.py  kwargs_util_test.py  primitive.py  primitive_test.py  pytree.py  serialize.py  serialize_test.py  trace_util.py
oryx/core/interpreters/: __init__.py  harvest.py  harvest_test.py  log_prob.py  log_prob_test.py  propagate.py  propagate_test.py
oryx/core/ppl/: __init__.py  effect_handler.py  effect_handler_test.py  plate_util.py  transformations.py  transformations_test.py
oryx/core/state/: __init__.py  api.py  function.py  function_test.py  module.py  registrations.py  registrations_test.py
oryx/distributions/: __init__.py  distribution_extensions.py  distribution_extensions_test.py
oryx/examples/notebooks/: a_tour_of_oryx.ipynb  probabilistic_programming.ipynb
oryx/experimental/: __init__.py
oryx/experimental/autoconj/: addn.py  addn_test.py  canonicalize.py  canonicalize_test.py  einsum.py  einsum_test.py
oryx/experimental/matching/: __init__.py  jax_rewrite.py  jax_rewrite_test.py  jaxpr_rewriter.py  matcher.py  matcher_test.py  rules.py  rules_test.py
oryx/experimental/mcmc/: __init__.py  kernels.py  kernels_test.py  utils.py
oryx/experimental/nn/: __init__.py  base.py  base_test.py  combinator.py  combinator_test.py  core.py  (+11 more)
oryx/internal/: __init__.py  test_util.py
oryx/tools/: build_oryx_docs.py
oryx/util/: __init__.py  summary.py  summary_test.py
(+13 files in other folders)
