[tool.poetry]
name = "oryx"
version = "0.2.4"
description = "Probabilistic programming and deep learning in JAX"
authors = ["Google LLC"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7"
jax = "0.3.21"
jaxlib = "0.3.20"
tensorflow-probability = {extras = ["jax"], version = "0.18.0"}


[tool.poetry.dev-dependencies]
inference-gym = "^0.0.4"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
