[tool.poetry]
name = "oryx"
version = "0.2.9"  # Also change in version.py
description = "Probabilistic programming and deep learning in JAX"
authors = ["Google LLC"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
jax = ">=0.4.36"
tensorflow-probability = ">=0.19.0"


[tool.poetry.dev-dependencies]
inference-gym = "^0.0.4"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
